crates/apollo-compiler/test_data/diagnostics/0044_union_member_not_of_object_type.txt
Error: `Pet` field must return an object type
    ╭─[0044_union_member_not_of_object_type.graphql:17:24]
    │
 17 │ union CatOrDog = Cat | Pet
    │                        ─┬─  
    │                         ╰─── This is a an interface
    │ 
    │ Help: Union members must be of base Object Type.
────╯

